2014-12-??    mlpack 1.0.11

  * Proper handling of dimension calculation in PCA.

  * Load parameter vectors properly for LinearRegression models.

  * Linker fixes for AugLagrangian specializations under Visual Studio.

2014-08-29    mlpack 1.0.10

  * Bugfix for NeighborSearch regression which caused very slow allknn/allkfn.
    Speeds are now restored to approximately 1.0.8 speeds, with significant
    improvement for the cover tree.

  * Detect dependencies correctly when ARMA_USE_WRAPPER is not being defined
    (i.e., libarmadillo.so does not exist).

  * Bugfix for compilation under Visual Studio.

2014-07-28    mlpack 1.0.9

  * GMM initialization is now safer and provides a working GMM when constructed
    with only the dimensionality and number of Gaussians (#314).

  * Check for division by 0 in Forward-Backward Algorithm in HMMs (#314).

  * Fix MaxVarianceNewCluster (used when re-initializing clusters for k-means)
    (#314).

  * Fixed implementation of Viterbi algorithm in HMM::Predict() (#316).

  * Significant speedups for dual-tree algorithms using the cover tree (#243,
    #329) including a faster implementation of FastMKS.

  * Fix for LRSDP optimizer so that it compiles and can be used (#325).

  * CF (collaborative filtering) now expects users and items to be zero-indexed,
    not one-indexed (#324).

  * CF::GetRecommendations() API change: now requires the number of
    recommendations as the first parameter.  The number of users in the local
    neighborhood should be specified with CF::NumUsersForSimilarity().

  * Removed incorrect PeriodicHRectBound (#30).

  * Refactor LRSDP into LRSDP class and standalone function to be optimized
    (#318).

  * Fix for centering in kernel PCA (#355).

  * Added simulated annealing (SA) optimizer, contributed by Zhihao Lou.

  * HMMs now support initial state probabilities; these can be set in the
    constructor, trained, or set manually with HMM::Initial() (#315).
